deploy: 7a49690c242d21160330d628b6b3fa2523bb7d9c

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -30,6 +30,25 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="python2verilog/api/modes.html">python2verilog.api.modes</a></li>
+<li><a href="python2verilog/backend/verilog/ast.html">python2verilog.backend.verilog.ast</a></li>
+<li><a href="python2verilog/backend/verilog/codegen.html">python2verilog.backend.verilog.codegen</a></li>
+<li><a href="python2verilog/backend/verilog/config.html">python2verilog.backend.verilog.config</a></li>
+<li><a href="python2verilog/exceptions.html">python2verilog.exceptions</a></li>
+<li><a href="python2verilog/ir/context.html">python2verilog.ir.context</a></li>
+<li><a href="python2verilog/ir/expressions.html">python2verilog.ir.expressions</a></li>
+<li><a href="python2verilog/ir/graph.html">python2verilog.ir.graph</a></li>
+<li><a href="python2verilog/ir/instance.html">python2verilog.ir.instance</a></li>
+<li><a href="python2verilog/ir/signals.html">python2verilog.ir.signals</a></li>
+<li><a href="python2verilog/optimizer/helpers.html">python2verilog.optimizer.helpers</a></li>
+<li><a href="python2verilog/optimizer/increase_work.html">python2verilog.optimizer.increase_work</a></li>
+<li><a href="python2verilog/utils/decorator.html">python2verilog.utils.decorator</a></li>
+<li><a href="python2verilog/utils/env.html">python2verilog.utils.env</a></li>
+<li><a href="python2verilog/utils/fifo.html">python2verilog.utils.fifo</a></li>
+<li><a href="python2verilog/utils/generics.html">python2verilog.utils.generics</a></li>
+<li><a href="python2verilog/utils/lines.html">python2verilog.utils.lines</a></li>
+<li><a href="python2verilog/utils/mit_license.html">python2verilog.utils.mit_license</a></li>
+<li><a href="python2verilog/utils/peek_counter.html">python2verilog.utils.peek_counter</a></li>
+<li><a href="python2verilog/utils/typed.html">python2verilog.utils.typed</a></li>
 </ul>
 
           </div>
