--- a/_modules/python2verilog/backend/verilog/codegen.html
+++ b/_modules/python2verilog/backend/verilog/codegen.html
@@ -412,6 +412,7 @@
         <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">ver</span><span class="o">.</span><span class="n">BlockingSub</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">signals</span><span class="o">.</span><span class="n">reset</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">UInt</span><span class="p">(</span><span class="mi">0</span><span class="p">)))</span>
         <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">())</span>
 
+        <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Making test cases&quot;</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">test_case</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">test_cases</span><span class="p">):</span>
             <span class="c1"># New test case and start</span>
             <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
@@ -485,6 +486,7 @@
 
         <span class="n">initial_loop</span> <span class="o">=</span> <span class="n">ver</span><span class="o">.</span><span class="n">Initial</span><span class="p">(</span><span class="n">body</span><span class="o">=</span><span class="n">initial_body</span><span class="p">)</span>
 
+        <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Creating python test code&quot;</span><span class="p">)</span>
         <span class="n">python_test_code</span> <span class="o">=</span> <span class="n">Lines</span><span class="p">()</span>
         <span class="k">for</span> <span class="n">case</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">test_cases</span><span class="p">:</span>
             <span class="n">python_test_code</span> <span class="o">+=</span> <span class="sa">f</span><span class="s2">&quot;print(list(</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2">(*</span><span class="si">{</span><span class="n">case</span><span class="si">}</span><span class="s2">)))&quot;</span>
