--- a/genindex.html
+++ b/genindex.html
@@ -39,6 +39,7 @@
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
@@ -186,8 +187,6 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.done_state">done_state (Context property)</a>
 </li>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.graph.DoneNode">DoneNode (class in python2verilog.ir.graph)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -265,6 +264,14 @@
       <li><a href="python2verilog.utils.html#python2verilog.utils.typed.guard">guard() (in module python2verilog.utils.typed)</a>
 </li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.typed.guard_dict">guard_dict() (in module python2verilog.utils.typed)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.graph.BasicElement.has_child">has_child() (BasicElement method)</a>
 </li>
   </ul></td>
 </tr></table>
