--- a/_modules/python2verilog/backend/verilog/config.html
+++ b/_modules/python2verilog/backend/verilog/config.html
@@ -60,7 +60,10 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="c1"># Enable debug comments graph elements as comment</span>
-    <span class="n">add_debug_comments</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="n">env</span><span class="o">.</span><span class="n">get_var</span><span class="p">(</span><span class="n">env</span><span class="o">.</span><span class="n">Vars</span><span class="o">.</span><span class="n">DEBUG_COMMENTS</span><span class="p">)</span></div>
+    <span class="n">add_debug_comments</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
+
+    <span class="k">def</span> <span class="nf">__post_init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">add_debug_comments</span> <span class="o">|=</span> <span class="nb">bool</span><span class="p">(</span><span class="n">env</span><span class="o">.</span><span class="n">get_var</span><span class="p">(</span><span class="n">env</span><span class="o">.</span><span class="n">Vars</span><span class="o">.</span><span class="n">DEBUG_COMMENTS</span><span class="p">))</span></div>
 
 </pre></div>
 
